--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,17 @@
 
 
 html {
-  background-color: gray;
+  background-color: black;
 }
+
+body{
+  top: 15%;
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: white;
+}
+
 header{
   width: 100%
 }
