--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,7 @@ h1 {
 h2 {
   color: blue;
 }
+
 img {
   display: block;
   width: 10%;
@@ -60,7 +61,13 @@ div#left {
 }
 
 div#left nav li {
+  width: 100%;
   color: black;
   font-size: 2em;
-  margin: 20%;
+  margin: 20% 0;
+  border-bottom: 1px solid black;
+}
+
+#left nav li a {
+  text-align: center;
 }
