--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,10 @@ h1 {
 h2 {
   color: blue;
 }
+p {
+  color: gray;
+  line-height: 20px;
+}
 
 img {
   display: block;
@@ -64,7 +68,7 @@ div#left nav li {
   width: 100%;
   color: black;
   font-size: 2em;
-  margin: 20%;
+  margin: 20% 0;
   border-bottom: 1px black;
 }
 
