--- a/styles.css
+++ b/styles.css
@@ -38,40 +38,52 @@ header nav.horizontal li a {
 }
 
 h1 {
-  color: blue;
+  background: linear-gradient(to right, black ,  white);
+  text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
+  font-family: Times new roman,monospace, sans-serif;
+  color: white;
+  margin-left: 25%;
 }
 
 h2 {
   color: blue;
+  text-align: center;
 }
 p {
   color: gray;
   line-height: 20px;
+  text-align: center;
 }
 
 img {
   display: block;
-  width: 10%;
-  height: auto;
+  width: 82%;
+  height: 415px;
 }
 
 div#left {
   float: left;
   position: fixed;
-  width: 250px;
+  width: 360px;
   height: 100%;
   bottom: 0;
-  background-color: white;
+  background-color:  gray;
 }
 
 div#left nav li {
   width: 100%;
-  color: black;
+  color: white;
   font-size: 2em;
   margin: 20% 0;
-  border-bottom: 1px black;
+  border-bottom: 1px white;
 }
 
-#left nav li a {
+div#left nav li a {
   text-align: center;
+}
+ul {
+  color: red;
+}
+ol {
+  color: red;
 }
