--- a/divider.css
+++ b/divider.css
@@ -45,8 +45,9 @@ p{
 }
 .container {
   position: relative;
-   width: 960px;
-    margin: 20px auto;
+  float: right;
+   width: 75%;
+    /*margin: 20px auto;*/
    padding: 0;
  }
 .container .column, .container .columns {
@@ -102,7 +103,7 @@ p{
   div#left {
     float: left;
     position: fixed;
-    width: 200px;
+    width: 360px;
     height: 100%;
     bottom: 0;
     background-color:  gray;
