--- a/styles2.css
+++ b/styles2.css
@@ -5,7 +5,8 @@ html {
 body {
   min-height: 100%;
   min-width: 320px;
-  max-width: 100%;
+  max-width: 75%;
+  width: 75%;
 }
 h1 {
   margin-left: 560px;
@@ -36,7 +37,7 @@ p{
 div#left {
   float: left;
   position: fixed;
-  width: 280px;
+  width: 360px;
   height: 100%;
   bottom: 0;
   background-color:  gray;
